using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public class Constants 
{
    //---------Camera----------------------
    public const string CAM_START = "CamStart";
    public const string CAM_NEAR = "CamNear";
    public const string CAM_FAR = "CamFar";
    public const string CAM_LEFT = "CamLeft";
    public const string CAM_RIGHT = "CamRight";
    public const string CAM_ROTATE = "CamRotate";

    //---------Player----------------------
    public const string IDLE = "idle";
    public const string START = "start";
    public const string STARTUP = "startup";
    public const string AIR = "air";

    //---------Sound-----------------------
    public const string MUSIC_1 = "Music_1";
    public const string MUSIC_2 = "Music_2";
    public const string MUSIC_3 = "Music_3";
    public const string SFX_FALL = "Fall";
    public const string SFX_BOOST = "Boost";
    public const string SFX_BOOST_END = "Boost_End";
    public const string SFX_BOOST_LOOP = "Boost_Loop";
    public const string SFX_SPIN = "Spin";
    public const string SFX_UPGRADE_1 = "Upgrade_1";
    public const string SFX_UPGRADE_2 = "Upgrade_2";
    public const string SFX_CLICK_UI = "Click_UI";
    public const string SFX_IDLE_1 = "Idle_1";
    public const string SFX_RUN_1 = "Run_1";
    public const string SFX_VAR = "Var";
    public const string SFX_XEDAP = "Xe_Dap";

}
